--- a/llm1.ipynb
+++ b/llm1.ipynb
@@ -198,7 +198,7 @@
     "from langchain.llms import OpenAI\n",
     "import os\n",
     "import openai\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
     "openai.api_key = os.environ[\"OPENAI_API_KEY\"]\n",
     "\n",
     "llm = OpenAI(temperature=0.0)"
